; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/core/seq/extr_seq_timer.c_snd_seq_timer_close.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/core/seq/extr_seq_timer.c_snd_seq_timer_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_seq_queue = type { %struct.snd_seq_timer* }
%struct.snd_seq_timer = type { i32* }

@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @snd_seq_timer_close(%struct.snd_seq_queue* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.snd_seq_queue*, align 8
  %4 = alloca %struct.snd_seq_timer*, align 8
  store %struct.snd_seq_queue* %0, %struct.snd_seq_queue** %3, align 8
  %5 = load %struct.snd_seq_queue*, %struct.snd_seq_queue** %3, align 8
  %6 = getelementptr inbounds %struct.snd_seq_queue, %struct.snd_seq_queue* %5, i32 0, i32 0
  %7 = load %struct.snd_seq_timer*, %struct.snd_seq_timer** %6, align 8
  store %struct.snd_seq_timer* %7, %struct.snd_seq_timer** %4, align 8
  %8 = load %struct.snd_seq_timer*, %struct.snd_seq_timer** %4, align 8
  %9 = icmp ne %struct.snd_seq_timer* %8, null
  %10 = xor i1 %9, true
  %11 = zext i1 %10 to i32
  %12 = call i64 @snd_BUG_ON(i32 %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %1
  %15 = load i32, i32* @EINVAL, align 4
  %16 = sub nsw i32 0, %15
  store i32 %16, i32* %2, align 4
  br label %34

17:                                               ; preds = %1
  %18 = load %struct.snd_seq_timer*, %struct.snd_seq_timer** %4, align 8
  %19 = getelementptr inbounds %struct.snd_seq_timer, %struct.snd_seq_timer* %18, i32 0, i32 0
  %20 = load i32*, i32** %19, align 8
  %21 = icmp ne i32* %20, null
  br i1 %21, label %22, label %33

22:                                               ; preds = %17
  %23 = load %struct.snd_seq_timer*, %struct.snd_seq_timer** %4, align 8
  %24 = getelementptr inbounds %struct.snd_seq_timer, %struct.snd_seq_timer* %23, i32 0, i32 0
  %25 = load i32*, i32** %24, align 8
  %26 = call i32 @snd_timer_stop(i32* %25)
  %27 = load %struct.snd_seq_timer*, %struct.snd_seq_timer** %4, align 8
  %28 = getelementptr inbounds %struct.snd_seq_timer, %struct.snd_seq_timer* %27, i32 0, i32 0
  %29 = load i32*, i32** %28, align 8
  %30 = call i32 @snd_timer_close(i32* %29)
  %31 = load %struct.snd_seq_timer*, %struct.snd_seq_timer** %4, align 8
  %32 = getelementptr inbounds %struct.snd_seq_timer, %struct.snd_seq_timer* %31, i32 0, i32 0
  store i32* null, i32** %32, align 8
  br label %33

33:                                               ; preds = %22, %17
  store i32 0, i32* %2, align 4
  br label %34

34:                                               ; preds = %33, %14
  %35 = load i32, i32* %2, align 4
  ret i32 %35
}

declare dso_local i64 @snd_BUG_ON(i32) #1

declare dso_local i32 @snd_timer_stop(i32*) #1

declare dso_local i32 @snd_timer_close(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
